docs/rundoc_output/cache_diff/cache_diff/tests/fails/duplicate_attribute.rs
use cache_diff::CacheDiff;

#[derive(CacheDiff)]
struct CustomDiffFn {
    #[cache_diff(rename = "foo", rename = "bar")]
    name: String,
}

fn main() {}
