docs/rundoc_output/cache_diff/cache_diff/tests/fails/duplicate_attribute.stderr
error: CacheDiff duplicate attribute: `rename`
 --> tests/fails/duplicate_attribute.rs:5:34
  |
5 |     #[cache_diff(rename = "foo", rename = "bar")]
  |                                  ^^^^^^

error: previously `rename` defined here
 --> tests/fails/duplicate_attribute.rs:5:18
  |
5 |     #[cache_diff(rename = "foo", rename = "bar")]
  |                  ^^^^^^
